--- a/MassFricAdj1219.ipynb
+++ b/MassFricAdj1219.ipynb
@@ -506,9 +506,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 295,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "closing parenthesis ')' does not match opening parenthesis '[' (1279621496.py, line 114)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [295]\u001b[0;36m\u001b[0m\n\u001b[0;31m    self.grad_norms = torch.concat([self.grad_norms, torch.linalg.norm(grad_trial).reshape([-1]))\u001b[0m\n\u001b[0m                                                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m closing parenthesis ')' does not match opening parenthesis '['\n"
+     ]
+    }
+   ],
    "source": [
     "## Fixed parameters\n",
     "# Parameters for the spring-slider\n",
@@ -559,7 +568,7 @@
     "class GradDescent:\n",
     "    # Constructor, initial value position\n",
     "    def __init__(self, beta0, beta_low, beta_high, targ_y, t, objGrad_func,  \n",
-    "                 max_steps, obs_rtol = 1e-5, lsrh_steps = 4):\n",
+    "                 max_steps, obs_rtol = 1e-5, grad_atol = 1.e-10, lsrh_steps = 4):\n",
     "        # Initial parameters, and their lower and upper bound\n",
     "        self.beta0 = beta0\n",
     "        self.beta_low = beta_low\n",
@@ -580,6 +589,9 @@
     "        # Tolerance of observation relative error\n",
     "        self.obs_tol = obs_rtol\n",
     "        \n",
+    "        # Tolerance of gradient absolute error\n",
+    "        self.grad_atol = grad_atol\n",
+    "        \n",
     "        # Sequence of parameters\n",
     "        self.betas = [beta0]\n",
     "        \n",
@@ -595,6 +607,9 @@
     "        obj, grad = self.objGrad_func(self.betas[-1], self.targ_y)\n",
     "        self.objs = [obj]\n",
     "        self.grads = [grad]\n",
+    "        \n",
+    "        # Norm of gradients\n",
+    "        self.grad_norms = torch.linalg.norm(grad).reshape([-1])\n",
     "        \n",
     "        # Find stepsize\n",
     "        maxStepSize = 0.1 * min(abs(beta0 / grad))\n",
@@ -617,6 +632,7 @@
     "        self.betas.append(beta_trial)\n",
     "        self.objs.append(obj_trial)\n",
     "        self.grads.append(grad_trial)\n",
+    "        self.grad_norms = torch.concat([self.grad_norms, torch.linalg.norm(grad_trial).reshape([-1]))\n",
     "        \n",
     "        # Return if obj_trial is smaller than obj\n",
     "        return obj_trial < obj\n",
@@ -636,6 +652,7 @@
     "        self.betas.append(beta_trial)\n",
     "        self.objs.append(obj_trial)\n",
     "        self.grads.append(grad_trial)\n",
+    "        self.grad_norms = torch.concat([self.grad_norms, torch.linalg.norm(grad_trial).reshape([-1]))\n",
     "        \n",
     "        # Return if obj_trial is smaller than obj\n",
     "        return obj_trial < self.objs[-2]\n",
@@ -650,17 +667,25 @@
     "        print(\"Gradient: \", self.grads[-1])\n",
     "        print(\"Relative error of observation: \", torch.sqrt(self.objs[-1]) / torch.linalg.norm(self.targ_y))\n",
     "        \n",
+    "        if torch.min(self.grad_norms) < self.grad_atol:\n",
+    "            print(\"The final predicted parameters: \", self.betas[torch.argmin(self.grad_norms)])\n",
+    "            return\n",
+    "        \n",
     "        # Run max_iters number of iterations\n",
     "        for i in range(self.max_steps):\n",
     "            success = self.oneDescent()\n",
     "            print(\"=\" * 40)\n",
     "            print(\"The {0}th descent succeeds: \".format(i + 1), success)\n",
-    "            print(\"Observation: \", self.objs[-1])\n",
-    "            print(\"Gradient: \", self.grads[-1])\n",
+    "#             print(\"Observation: \", self.objs[-1])\n",
+    "#             print(\"Gradient: \", self.grads[-1])\n",
     "            print(\"Relative error of observation: \", torch.sqrt(self.objs[-1]) / torch.linalg.norm(self.targ_y))\n",
+    "            \n",
+    "            # Check if the gradient is small enough\n",
+    "            if torch.min(self.grad_norms) < self.grad_atol:\n",
+    "                break\n",
     "        \n",
     "        # Return\n",
-    "        print(\"The final predicted parameters: \", self.betas[-1])\n",
+    "        print(\"The final predicted parameters: \", self.betas[torch.argmin(self.grad_norms)])\n",
     "        return\n",
     "    \n",
     "    # Project the new point into the constraint set\n",
@@ -682,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 293,
    "metadata": {
     "scrolled": true
    },
@@ -726,134 +751,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time cost in computing gradients:  0.0811159610748291\n",
-      "Time cost in computing gradients:  1.6868934631347656\n",
+      "Time cost in computing gradients:  0.08232331275939941\n",
+      "Time cost in computing gradients:  1.5620646476745605\n",
       "========================================\n",
       "Initial descent succeeds:  tensor(False)\n",
       "Observation:  tensor(0.0740)\n",
       "Gradient:  tensor([-7.9232e+00,  1.4540e+01,  6.5002e-03, -9.8812e-01])\n",
       "Relative error of observation:  tensor(0.0079)\n",
-      "Time cost in computing gradients:  1.4232211112976074\n",
-      "========================================\n",
-      "The 1th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(0.0363)\n",
-      "Gradient:  tensor([-4.6010e+00,  9.7745e+00,  3.7324e-03, -6.6414e-01])\n",
-      "Relative error of observation:  tensor(0.0055)\n",
-      "Time cost in computing gradients:  1.353576898574829\n",
-      "========================================\n",
-      "The 2th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(0.0039)\n",
-      "Gradient:  tensor([-3.0672e-01,  2.4481e+00,  6.3242e-04, -1.6617e-01])\n",
-      "Relative error of observation:  tensor(0.0018)\n",
-      "Time cost in computing gradients:  1.3240103721618652\n",
-      "========================================\n",
-      "The 3th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(0.0015)\n",
-      "Gradient:  tensor([ 3.9681e-01,  7.8478e-01,  1.7659e-04, -5.3193e-02])\n",
-      "Relative error of observation:  tensor(0.0011)\n",
-      "Time cost in computing gradients:  1.344433069229126\n",
-      "========================================\n",
-      "The 4th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(0.0011)\n",
-      "Gradient:  tensor([ 5.2309e-01,  2.6202e-01,  5.9689e-05, -1.7722e-02])\n",
-      "Relative error of observation:  tensor(0.0009)\n",
-      "Time cost in computing gradients:  1.6776437759399414\n",
-      "========================================\n",
-      "The 5th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(0.0007)\n",
-      "Gradient:  tensor([ 4.5807e-01,  1.7399e-01,  4.0513e-05, -1.1780e-02])\n",
-      "Relative error of observation:  tensor(0.0008)\n",
-      "Time cost in computing gradients:  1.3250656127929688\n",
-      "========================================\n",
-      "The 6th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.9361e-05)\n",
-      "Gradient:  tensor([ 2.1364e-02,  2.9796e-01,  5.6214e-05, -2.0335e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.044123649597168\n",
-      "========================================\n",
-      "The 7th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.6810e-05)\n",
-      "Gradient:  tensor([-5.3040e-03,  3.2747e-01,  6.1171e-05, -2.2344e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  0.9959878921508789\n",
-      "========================================\n",
-      "The 8th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.6133e-05)\n",
-      "Gradient:  tensor([-2.0347e-03,  3.2209e-01,  6.0250e-05, -2.1978e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.0109782218933105\n",
-      "========================================\n",
-      "The 9th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.5669e-05)\n",
-      "Gradient:  tensor([-9.1578e-04,  3.1970e-01,  5.9852e-05, -2.1816e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.2851386070251465\n",
-      "========================================\n",
-      "The 10th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.5331e-05)\n",
-      "Gradient:  tensor([-2.2087e-04,  3.1814e-01,  5.9582e-05, -2.1710e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.2575609683990479\n",
-      "========================================\n",
-      "The 11th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.4858e-05)\n",
-      "Gradient:  tensor([ 2.7701e-04,  3.1654e-01,  5.9305e-05, -2.1601e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.0266737937927246\n",
-      "========================================\n",
-      "The 12th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.4593e-05)\n",
-      "Gradient:  tensor([ 5.9876e-04,  3.1558e-01,  5.9144e-05, -2.1536e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.0071051120758057\n",
-      "========================================\n",
-      "The 13th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.4289e-05)\n",
-      "Gradient:  tensor([ 9.7075e-04,  3.1448e-01,  5.8957e-05, -2.1461e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.0239143371582031\n",
-      "========================================\n",
-      "The 14th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.3874e-05)\n",
-      "Gradient:  tensor([ 1.2050e-03,  3.1329e-01,  5.8757e-05, -2.1381e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.3411448001861572\n",
-      "========================================\n",
-      "The 15th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.3489e-05)\n",
-      "Gradient:  tensor([ 1.4071e-03,  3.1220e-01,  5.8576e-05, -2.1307e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.2887787818908691\n",
-      "========================================\n",
-      "The 16th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.3081e-05)\n",
-      "Gradient:  tensor([ 1.5552e-03,  3.1121e-01,  5.8391e-05, -2.1239e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  0.9991014003753662\n",
-      "========================================\n",
-      "The 17th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.2489e-05)\n",
-      "Gradient:  tensor([ 1.6092e-03,  3.0984e-01,  5.8167e-05, -2.1147e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.3081748485565186\n",
-      "========================================\n",
-      "The 18th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.1841e-05)\n",
-      "Gradient:  tensor([ 1.7047e-03,  3.0840e-01,  5.7903e-05, -2.1049e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.2807655334472656\n",
-      "========================================\n",
-      "The 19th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.1445e-05)\n",
-      "Gradient:  tensor([ 1.7290e-03,  3.0753e-01,  5.7752e-05, -2.0990e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "Time cost in computing gradients:  1.0948193073272705\n",
-      "========================================\n",
-      "The 20th descent succeeds:  tensor(True)\n",
-      "Observation:  tensor(8.0742e-05)\n",
-      "Gradient:  tensor([ 1.7845e-03,  3.0588e-01,  5.7488e-05, -2.0878e-02])\n",
-      "Relative error of observation:  tensor(0.0003)\n",
-      "The final predicted parameters:  tensor([0.0116, 0.0060, 2.5002, 0.5511])\n"
+      "The final predicted parameters:  tensor([0.0110, 0.0160, 2.5003, 0.5500])\n"
      ]
     }
    ],
@@ -863,33 +768,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([0.0080, 0.0120, 0.0020, 0.5800]),\n",
-       " tensor([0.0086, 0.0132, 0.0020, 0.5798]),\n",
-       " tensor([0.0093, 0.0132, 0.0020, 0.5798]),\n",
-       " tensor([0.0096, 0.0135, 0.0020, 0.5798]),\n",
-       " tensor([0.0102, 0.0139, 0.0020, 0.5798]),\n",
-       " tensor([0.0107, 0.0144, 0.0021, 0.5797]),\n",
-       " tensor([0.0111, 0.0142, 0.0021, 0.5797]),\n",
-       " tensor([0.0109, 0.0144, 0.0021, 0.5797]),\n",
-       " tensor([0.0110, 0.0144, 0.0021, 0.5797]),\n",
-       " tensor([0.0110, 0.0144, 0.0021, 0.5797]),\n",
-       " tensor([0.0110, 0.0144, 0.0021, 0.5797]),\n",
-       " tensor([0.0110, 0.0144, 0.0021, 0.5797])]"
+       "tensor([ 0.0000e+00, -7.9232e+00,  1.4540e+01,  6.5002e-03, -9.8812e-01])"
       ]
      },
-     "execution_count": 526,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myGrad.betas"
+    "myGrad.grad_norms"
    ]
   },
   {
