--- a/MassFricAdj1219.ipynb
+++ b/MassFricAdj1219.ipynb
@@ -506,18 +506,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 297,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "closing parenthesis ')' does not match opening parenthesis '[' (1279621496.py, line 114)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [295]\u001b[0;36m\u001b[0m\n\u001b[0;31m    self.grad_norms = torch.concat([self.grad_norms, torch.linalg.norm(grad_trial).reshape([-1]))\u001b[0m\n\u001b[0m                                                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m closing parenthesis ')' does not match opening parenthesis '['\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Fixed parameters\n",
     "# Parameters for the spring-slider\n",
@@ -632,7 +623,7 @@
     "        self.betas.append(beta_trial)\n",
     "        self.objs.append(obj_trial)\n",
     "        self.grads.append(grad_trial)\n",
-    "        self.grad_norms = torch.concat([self.grad_norms, torch.linalg.norm(grad_trial).reshape([-1]))\n",
+    "        self.grad_norms = torch.concat([self.grad_norms, torch.linalg.norm(grad_trial).reshape([-1])])\n",
     "        \n",
     "        # Return if obj_trial is smaller than obj\n",
     "        return obj_trial < obj\n",
@@ -652,7 +643,7 @@
     "        self.betas.append(beta_trial)\n",
     "        self.objs.append(obj_trial)\n",
     "        self.grads.append(grad_trial)\n",
-    "        self.grad_norms = torch.concat([self.grad_norms, torch.linalg.norm(grad_trial).reshape([-1]))\n",
+    "        self.grad_norms = torch.concat([self.grad_norms, torch.linalg.norm(grad_trial).reshape([-1])])\n",
     "        \n",
     "        # Return if obj_trial is smaller than obj\n",
     "        return obj_trial < self.objs[-2]\n",
@@ -707,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 300,
    "metadata": {
     "scrolled": true
    },
@@ -751,14 +742,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time cost in computing gradients:  0.08232331275939941\n",
-      "Time cost in computing gradients:  1.5620646476745605\n",
+      "Time cost in computing gradients:  0.08459782600402832\n",
+      "Time cost in computing gradients:  1.7253012657165527\n",
       "========================================\n",
       "Initial descent succeeds:  tensor(False)\n",
       "Observation:  tensor(0.0740)\n",
       "Gradient:  tensor([-7.9232e+00,  1.4540e+01,  6.5002e-03, -9.8812e-01])\n",
       "Relative error of observation:  tensor(0.0079)\n",
-      "The final predicted parameters:  tensor([0.0110, 0.0160, 2.5003, 0.5500])\n"
+      "The final predicted parameters:  tensor([0.0110, 0.0160, 0.0010, 0.5800])\n"
      ]
     }
    ],
@@ -768,16 +759,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 0.0000e+00, -7.9232e+00,  1.4540e+01,  6.5002e-03, -9.8812e-01])"
+       "tensor([ 0.0000, 16.5879])"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
