Added Moving Asymtos.

--- a/MassFricAdj0109_MovAsymptos.ipynb
+++ b/MassFricAdj0109_MovAsymptos.ipynb
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 349,
    "metadata": {
     "scrolled": true
    },
@@ -1085,7 +1085,12 @@
       "shit\n",
       "shit\n",
       "shit\n",
-      "shit\n"
+      "shit\n",
+      "Time cost in computing gradients:  1.6125226020812988\n",
+      "========================================\n",
+      "The 20th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(7.1944e-06)\n",
+      "The final predicted parameters:  tensor([0.0110, 0.0168, 0.0022, 0.5988])\n"
      ]
     }
    ],
