--- a/MassFricAdj0109_MovAsymptos.ipynb
+++ b/MassFricAdj0109_MovAsymptos.ipynb
@@ -556,10 +556,10 @@
     "\n",
     "\n",
     "# Give the initial position and gradient updating function\n",
-    "class GradDescent:\n",
+    "class MovingAsymptotes:\n",
     "    # Constructor, initial value position\n",
     "    def __init__(self, beta0, beta_low, beta_high, targ_y, t, objGrad_func, max_steps, \n",
-    "                 stepping = 'BB', obs_rtol = 1e-5, grad_atol = 1.e-10, lsrh_steps = 10):\n",
+    "                 obs_rtol = 1e-5, grad_atol = 1.e-10, lsrh_steps = 10):\n",
     "        # Initial parameters, and their lower and upper bound\n",
     "        self.beta0 = beta0\n",
     "        self.beta_low = beta_low\n",
@@ -577,9 +577,6 @@
     "        # Maximum number of steps allowed\n",
     "        self.max_steps = max_steps\n",
     "        \n",
-    "        # Stepping scheme, either BB or lsrh\n",
-    "        self.stepping = stepping\n",
-    "        \n",
     "        # Tolerance of observation relative error\n",
     "        self.obs_tol = obs_rtol\n",
     "        \n",
@@ -592,22 +589,42 @@
     "        # Maximum line search steps\n",
     "        self.lsrh_steps = lsrh_steps\n",
     "        \n",
-    "        # Get Initial observations\n",
+    "        # Gather all observations\n",
     "        self.objs = []\n",
-    "    \n",
-    "    # First descent, cannot use Barzilai–Borwein stepping, using linesearch\n",
-    "    def firstDescent(self):\n",
-    "        # Compute obj and grad\n",
-    "        obj, grad = self.objGrad_func(self.betas[-1], self.targ_y)\n",
-    "        self.objs = [obj]\n",
-    "        self.grads = [grad]\n",
     "        \n",
-    "        # Norm of gradients\n",
-    "        self.grad_norms = torch.linalg.norm(grad).reshape([-1])\n",
-    "        \n",
-    "        # Perform linesearch\n",
-    "        return self.lineSearch()\n",
+    "        # Document all Ls and Us, a.k.a. the limits\n",
+    "        self.Ls = []\n",
+    "        self.Us = []\n",
     "    \n",
+    "    # Compute Ls and Us\n",
+    "    def computeLAndU(self):\n",
+    "        # Scaling factor s\n",
+    "        s = 0.7\n",
+    "        \n",
+    "        # If there are less than 2 betas already used\n",
+    "        if len(self.betas) < 2:\n",
+    "            this_L = self.betas[-1] - (self.beta_high - self.beta_low)\n",
+    "            this_U = self.betas[-1] + (self.beta_high - self.beta_low)\n",
+    "        \n",
+    "        else:\n",
+    "            # Find the indexes of beta at which it's stable\n",
+    "            stable_idx = (self.betas[-1] * self.betas[-2] > 0)\n",
+    "            scaling = torch.zeros(self.betas[-1].shape)\n",
+    "            \n",
+    "            scaling[stable_idx] = 1. / torch.sqrt(s)\n",
+    "            scaling[~stable_idx] = s\n",
+    "            \n",
+    "            # Update this L and U\n",
+    "            this_L = self.betas[-1] - scaling * (self.betas[-2] - self.Ls[-1])\n",
+    "            this_U = self.betas[-1] + scaling * (self.Us[-1] - self.betas[-2])\n",
+    "        \n",
+    "        # Update L and U\n",
+    "        self.Ls.append(this_L)\n",
+    "        self.Us.append(this_U)\n",
+    "        \n",
+    "        return\n",
+    "            \n",
+    "            \n",
     "    # Run one descent using either Barzilai–Borwein stepping or linesearch\n",
     "    def oneDescent(self):\n",
     "        # Make sure there are more than 1 steps beforehand\n",
