--- a/MassFricAdj0109_MovAsymptos.ipynb
+++ b/MassFricAdj0109_MovAsymptos.ipynb
@@ -589,8 +589,9 @@
     "        # Maximum line search steps\n",
     "        self.lsrh_steps = lsrh_steps\n",
     "        \n",
-    "        # Gather all observations\n",
+    "        # Gather all observations and grads\n",
     "        self.objs = []\n",
+    "        self.grads = []\n",
     "        \n",
     "        # Document all Ls and Us, a.k.a. the limits\n",
     "        self.Ls = []\n",
@@ -625,10 +626,21 @@
     "        return\n",
     "            \n",
     "            \n",
-    "    # Run one descent using either Barzilai–Borwein stepping or linesearch\n",
-    "    def oneDescent(self):\n",
-    "        # Make sure there are more than 1 steps beforehand\n",
-    "        assert(len(self.objs) >= 2)\n",
+    "    # Run one step using moving asymptotes\n",
+    "    def oneStep(self):\n",
+    "        # Make sure there are more than 1 inputs\n",
+    "        assert(len(self.betas) >= 1)\n",
+    "        \n",
+    "        # Get observation and gradient at this step\n",
+    "        this_obj, this_grad = self.objGrad_func(self.betas[-1], self.targ_y, objOnly = False)\n",
+    "        self.objs.append(this_obj)\n",
+    "        self.grads.append(this_grad)\n",
+    "        \n",
+    "        # Update Ls and Us\n",
+    "        self.computeLAndU()\n",
+    "        \n",
+    "        # Find the approximation and the solution\n",
+    "        \n",
     "        \n",
     "        # Compute BB stepsize\n",
     "        BBStepSize = abs(torch.dot(self.betas[-1] - self.betas[-2], self.grads[-1] - self.grads[-2])) / \\\n",
@@ -1362,7 +1374,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1376,7 +1388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
