--- a/MassFricAdj0109_MovAsymptos.ipynb
+++ b/MassFricAdj0109_MovAsymptos.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,11 +53,11 @@
     "\"\"\"\n",
     "class MassFricParams: \n",
     "    # Constructor\n",
-    "    def __init__(self, k, m, V, g, RSParams, y0):\n",
-    "        self.k = k\n",
-    "        self.m = m\n",
-    "        self.V = V\n",
-    "        self.g = g\n",
+    "    def __init__(self, kmVg, RSParams, y0):\n",
+    "        self.k = kmVg[0]\n",
+    "        self.m = kmVg[1]\n",
+    "        self.V = kmVg[2]\n",
+    "        self.g = kmVg[3]\n",
     "        self.RSParams = RSParams\n",
     "        self.y0 = y0\n",
     "    \n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
