--- a/MassFricAdj1219_GradDescent.ipynb
+++ b/MassFricAdj1219_GradDescent.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,11 +53,11 @@
     "\"\"\"\n",
     "class MassFricParams: \n",
     "    # Constructor\n",
-    "    def __init__(self, k, m, V, g, RSParams, y0):\n",
-    "        self.k = k\n",
-    "        self.m = m\n",
-    "        self.V = V\n",
-    "        self.g = g\n",
+    "    def __init__(self, kmVg, RSParams, y0):\n",
+    "        self.k = kmVg[0]\n",
+    "        self.m = kmVg[1]\n",
+    "        self.V = kmVg[2]\n",
+    "        self.g = kmVg[3]\n",
     "        self.RSParams = RSParams\n",
     "        self.y0 = y0\n",
     "    \n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
     "def objGradFunc(beta, targ_y, scaling, objOnly = False):\n",
     "    # Generate target v\n",
     "    this_RSParams = beta * scaling\n",
-    "    this_SpringSlider = MassFricParams(k, m, V, g, this_RSParams, y0)\n",
+    "    this_SpringSlider = MassFricParams([k, m, V, g], this_RSParams, y0)\n",
     "    \n",
     "    this_seq = TimeSequenceGen(T, NofTPts, this_SpringSlider, \n",
     "                               rtol=this_rtol, atol=this_atol, regularizedFlag=False)\n",
@@ -720,18 +720,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Optimize by $\\alpha=[k, m, V, g]$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Obtain observation at (alpha, beta_this, beta_targ, y0)\n",
+    "def O_GAN(alpha, beta_this, beta_targ, y0):\n",
+    "    # Get target sequence\n",
+    "    targ_SpringSlider = MassFricParams(alpha, beta_targ, y0)\n",
+    "    targ_seq = TimeSequenceGen(T, NofTPts, targ_SpringSlider, rtol=this_rtol, atol=this_atol, regularizedFlag=False)\n",
+    "    v = targ_seq.default_y[1, :]\n",
+    "    \n",
+    "    # Get this sequence\n",
+    "    this_SpringSlider = MassFricParams(alpha, beta_this, y0)\n",
+    "    this_seq = TimeSequenceGen(T, NofTPts, this_SpringSlider, rtol=this_rtol, atol=this_atol, regularizedFlag=False)\n",
+    "    \n",
+    "    return O(this_seq.default_y, v, this_seq.t, this_SpringSlider)\n",
+    "\n",
+    "# Try to find maximum of O_GAN in terms of alpha\n",
+    "def optAlpha(O_GAN, **kwargs):\n",
+    "    # Unzip the arguments\n",
+    "    beta_this = kwargs['beta_this']\n",
+    "    alpha0 = kwargs['alpha0']\n",
+    "    beta_targ = kwargs['beta_targ']\n",
+    "    y0 = kwargs['y0']\n",
+    "    \n",
+    "    # Define the function\n",
+    "    func = lambda x: O_GAN(x, beta_this, beta_targ, y0)\n",
+    "    \n",
+    "    # Use simulated-annealing grad-free method to optimize for alpha\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Fixed parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate target v\n",
     "targ_RSParams = torch.tensor([0.011, 0.016, 1.e-3, 0.58])\n",
-    "targ_SpringSlider = MassFricParams(k, m, V, g, targ_RSParams, y0)\n",
+    "targ_SpringSlider = MassFricParams([k, m, V, g], targ_RSParams, y0)\n",
     "\n",
     "targ_seq = TimeSequenceGen(T, NofTPts, targ_SpringSlider, rtol=this_rtol, atol=this_atol, regularizedFlag=False)\n",
     "v = targ_seq.default_y[1, :]"
@@ -746,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +797,8 @@
     "beta0 = torch.tensor([0.004, 0.008, 2.e-3, 0.5])\n",
     "beta_low = torch.tensor([0.001, 0.006, 0.5e-3, 0.3])\n",
     "beta_high = torch.tensor([0.021, 0.026, 5, 0.8])\n",
-    "myGradBB = GradDescent(beta0, beta_low, beta_high, v, targ_seq.t, objGrad_func = objGradFunc, \n",
+    "scaling = torch.tensor([1., 1., 1., 1.])\n",
+    "myGradBB = GradDescent(beta0, beta_low, beta_high, v, targ_seq.t, objGrad_func = objGradFunc, scaling = scaling, \n",
     "                     max_steps = 200, obs_rtol = 1e-5, lsrh_steps = 10)"
    ]
   },
