--- a/MassFricAdj1219_GradDescent.ipynb
+++ b/MassFricAdj1219_GradDescent.ipynb
@@ -729,6 +729,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sequence specific parameters\n",
+    "T = 5.\n",
+    "NofTPts = 1000\n",
+    "\n",
+    "# Tolerance parameters\n",
+    "this_rtol = 1.e-8\n",
+    "this_atol = 1.e-10\n",
+    "\n",
     "# Obtain observation at (alpha, beta_this, beta_targ, y0)\n",
     "def O_GAN(alpha, beta_this, beta_targ, y0):\n",
     "    # Get target sequence\n",
@@ -750,13 +758,66 @@
     "    beta_targ = kwargs['beta_targ']\n",
     "    y0 = kwargs['y0']\n",
     "    \n",
+    "    # Other parameters for simulated annealing function\n",
+    "    alp_low = kwargs['alp_low']\n",
+    "    alp_hi = kwargs['alp_hi']\n",
+    "    max_iters = kwargs['max_iters']\n",
+    "    \n",
+    "    \n",
     "    # Define the function\n",
     "    func = lambda x: O_GAN(x, beta_this, beta_targ, y0)\n",
     "    \n",
-    "    # Use simulated-annealing grad-free method to optimize for alpha\n",
+    "    # Use dual-simulated-annealing grad-free method to optimize for alpha\n",
+    "    new_alpha = opt.dual_annealing(func, \n",
+    "                                   [(alp_low[i], alp_hi[i]) for i in len(alp_low)], \n",
+    "                                   maxiter = max_iters, \n",
+    "                                   x0 = alpha0\n",
+    "                                  ).x\n",
     "    \n",
-    "    \n",
-    "    "
+    "    return torch.tensor(new_alpha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.7.3'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Fixed initial parameters\n",
+    "# Parameters for the spring-slider\n",
+    "k = 50.\n",
+    "m = 1.\n",
+    "V = 1.\n",
+    "g = 9.8\n",
+    "\n",
+    "alpha0 = torch.tensor([k, m, V, g])\n",
+    "y0 = torch.tensor([0., 1.0, 1.0])\n",
+    "\n",
+    "beta0 = torch.tensor([0.004, 0.008, 2.e-3, 0.5])\n",
+    "beta_targ = torch.tensor([0.011, 0.016, 1.e-3, 0.58])\n",
+    "\n",
+    "# Other arguments for optAlpha function\n",
+    "alp_low = torch.tensor([40., 0.5, 0.1, 9.8])\n",
+    "alp_hi = torch.tensor([100., 2., 10., 9.8])\n",
+    "max_iters = 200\n",
+    "\n",
+    "kwgs = {\n",
+    "    'beta_this' : beta0, \n",
+    "    'beta_targ' : beta_targ, \n",
+    "    'y0' : y0, \n",
+    "    'alp_low' : \n",
+    "}"
    ]
   },
   {
@@ -799,7 +860,7 @@
     "beta_high = torch.tensor([0.021, 0.026, 5, 0.8])\n",
     "scaling = torch.tensor([1., 1., 1., 1.])\n",
     "myGradBB = GradDescent(beta0, beta_low, beta_high, v, targ_seq.t, objGrad_func = objGradFunc, scaling = scaling, \n",
-    "                     max_steps = 200, obs_rtol = 1e-5, lsrh_steps = 10)"
+    "                       max_steps = 200, obs_rtol = 1e-5, lsrh_steps = 10)"
    ]
   },
   {
