--- a/MassFricAdj1219_GradDescent.ipynb
+++ b/MassFricAdj1219_GradDescent.ipynb
@@ -62,20 +62,37 @@
     "\"\"\"\n",
     "class MassFricParams: \n",
     "    # Constructor\n",
-    "    def __init__(self, kmVg, RSParams, y0):\n",
+    "    def __init__(self, kmg, VT, RSParams, y0):\n",
+    "        # Define constant parameters k, m and g\n",
     "        self.k = kmVg[0]\n",
     "        self.m = kmVg[1]\n",
-    "        self.V = kmVg[2]\n",
-    "        self.g = kmVg[3]\n",
+    "        self.g = kmVg[2]\n",
+    "        \n",
+    "        # Get the VT relation\n",
+    "        self.V = VT[0, :]\n",
+    "        self.T = VT[1, :]\n",
+    "        \n",
     "        self.RSParams = RSParams\n",
     "        self.y0 = y0\n",
+    "        \n",
+    "        # Get the function of V at T\n",
+    "        self.vtFunc = interp1d(self.T, self.V)\n",
+    "        \n",
+    "    # Define the function that gives V at t\n",
+    "    def VatT_interp1(self, t):\n",
+    "        # Piecewise linear interplation\n",
+    "        if t < self.T[0]:\n",
+    "            v = self.V[0]\n",
+    "        elif t > self.T[-1]:\n",
+    "            v = self.V[-1]\n",
+    "        else:\n",
+    "            v = self.vtFunc(t)\n",
     "    \n",
     "    # Output the information of this class\n",
     "    def print_info(self):\n",
     "        print(\"-\" * 20, \" Mass and spring parameters \", \"-\"*20)\n",
     "        print('k:        ', self.k)\n",
     "        print('m:        ', self.m)\n",
-    "        print('V:        ', self.V)\n",
     "        print('g:        ', self.g)\n",
     "        print('\\n')\n",
     "        \n",
@@ -85,6 +102,11 @@
     "        print('b:        ', self.RSParams[1])\n",
     "        print('DRS:      ', self.RSParams[2])\n",
     "        print('y0:       ', self.y0)\n",
+    "        \n",
+    "        # Plot V at t\n",
+    "        plt.figure()\n",
+    "        plt.plot(self.T, self.V, linewidth = 2.0)\n",
+    "        plt.show()\n",
     "        "
    ]
   },
