--- a/MassFricAdj1219_GradDescent.ipynb
+++ b/MassFricAdj1219_GradDescent.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,19 @@
     "        self.V = VT[0, :]\n",
     "        self.T = VT[1, :]\n",
     "        \n",
+    "        # Get the displacement at T\n",
+    "        self.S = torch.zeros(self.V.shape)\n",
+    "        self.S[1:] = torch.cumulative_trapezoid(self.V, self.T)\n",
+    "        \n",
     "        self.RSParams = RSParams\n",
     "        self.y0 = y0\n",
     "        \n",
-    "        # Get the function of V at T\n",
+    "        # Get the function of V, S at T\n",
     "        self.vtFunc = interp1d(self.T, self.V)\n",
+    "        self.stFunc = interp1d(self.T, self.S)\n",
     "        \n",
     "    # Define the function that gives V at t\n",
-    "    def VatT_interp1(self, t):\n",
+    "    def VatT_interp(self, t):\n",
     "        # Piecewise linear interplation\n",
     "        if t < self.T[0]:\n",
     "            v = self.V[0]\n",
@@ -87,6 +92,18 @@
     "            v = self.V[-1]\n",
     "        else:\n",
     "            v = self.vtFunc(t)\n",
+    "        return v\n",
+    "    \n",
+    "    # Define the function that gives S at t\n",
+    "    def SatT_interp(self, t):\n",
+    "        # Piecewise linear interplation\n",
+    "        if t < self.T[0]:\n",
+    "            s = self.S[0]\n",
+    "        elif t > self.T[-1]:\n",
+    "            s = self.S[-1]\n",
+    "        else:\n",
+    "            s = self.stFunc(t)\n",
+    "        return s\n",
     "    \n",
     "    # Output the information of this class\n",
     "    def print_info(self):\n",
@@ -157,17 +174,18 @@
     "#         tau = self.N * a * torch.asinh(\n",
     "#                    self.Ds / 2. / Vr * torch.exp((fr + b * torch.log(Vr * self.theta / DRS)) / a)\n",
     "#                    )\n",
+    "        # Get the displacement at t of the spring\n",
     "        \n",
     "        if self.regularizedFlag:\n",
     "            DyDt = torch.tensor([y[1], \n",
-    "                                 self.MFParams.k / self.MFParams.m * (self.MFParams.V * t - y[0]) - \\\n",
+    "                                 self.MFParams.k / self.MFParams.m * (self.MFParams.SatT_interp(t) - y[0]) - \\\n",
     "                                 self.MFParams.g * (a * torch.asinh(\n",
     "                                     y[1] / 2.e-6 * torch.exp((fStar + b * torch.log(1.e-6 * y[2] / DRS)) / a)\n",
     "                                 )), \n",
     "                                 1 - y[2] * 1.e-6 / DRS])\n",
     "        else:\n",
     "            DyDt = torch.tensor([y[1], \n",
-    "                                 self.MFParams.k / self.MFParams.m * (self.MFParams.V * t - y[0]) - \\\n",
+    "                                 self.MFParams.k / self.MFParams.m * (self.MFParams.SatT_interp(t) - y[0]) - \\\n",
     "                                 self.MFParams.g * (fStar + \\\n",
     "                                                    a * torch.log(y[1] / 1.e-6) + \\\n",
     "                                                    b * torch.log(1.e-6 * y[2] / DRS)), \n",
