--- a/MassFricAdj0109_MovAsymptos.ipynb
+++ b/MassFricAdj0109_MovAsymptos.ipynb
@@ -132,14 +132,14 @@
     "                                 self.MFParams.g * (a * torch.asinh(\n",
     "                                     y[1] / 2.e-6 * torch.exp((fStar + b * torch.log(1.e-6 * y[2] / DRS)) / a)\n",
     "                                 )), \n",
-    "                                 1 - y[2] * 1.e-6 / DRS])\n",
+    "                                 1 - y[2] * y[1] / DRS])\n",
     "        else:\n",
     "            DyDt = torch.tensor([y[1], \n",
     "                                 self.MFParams.k / self.MFParams.m * (self.MFParams.V * t - y[0]) - \\\n",
     "                                 self.MFParams.g * (fStar + \\\n",
     "                                                    a * torch.log(y[1] / 1.e-6) + \\\n",
     "                                                    b * torch.log(1.e-6 * y[2] / DRS)), \n",
-    "                                 1 - y[2] * 1.e-6 / DRS])             \n",
+    "                                 1 - y[2] * y[1] / DRS])             \n",
     "        # DEBUG LINES\n",
     "#         print(\"-\" * 30)\n",
     "#         print('t = ', t)\n",
