--- a/MassFricAdj1219_GradDescent.ipynb
+++ b/MassFricAdj1219_GradDescent.ipynb
@@ -904,11 +904,13 @@
     "    'beta_high' : beta_high, \n",
     "    'regularizedFlag' : regularizedFlag, \n",
     "    'maxFuncCalls' : maxFuncCalls, \n",
-    "    'noLocalSearch' : noLocalSearch\n",
+    "    'noLocalSearch' : noLocalSearch, \n",
+    "    'this_rtol': this_rtol, \n",
+    "    'this_atol' : this_atol\n",
     "}\n",
     "\n",
     "# Function to get target v\n",
-    "def generate_target_v(alpha, VT, beta, y0, regularizedFlag = False):\n",
+    "def generate_target_v(alpha, VT, beta, y0, this_rtol, this_atol, regularizedFlag):\n",
     "    # y0[1] = alpha[2]\n",
     "    targ_SpringSlider = MassFricParams(alpha, VT, beta, y0)\n",
     "    targ_SpringSlider.print_info()\n",
@@ -1051,7 +1053,7 @@
     "    \n",
     "    ## Run grad descent on beta\n",
     "    # Generate target v\n",
-    "    v, t = generate_target_v(this_alpha, kwgs['VT'], kwgs['beta_targ'], kwgs['y0'], kwgs['regularizedFlag'])\n",
+    "    v, t = generate_target_v(this_alpha, kwgs['VT'], kwgs['beta_targ'], kwgs['y0'], kwgs['this_rtol'], kwgs['this_atol'], kwgs['regularizedFlag'])\n",
     "    \n",
     "    # Run gradient descent\n",
     "    myGradBB = GradDescent(this_alpha, kwgs['alp_low'], kwgs['alp_high'], kwgs['VT'], \n",
